--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,13 +27,13 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/image_left_margin"
         android:layout_marginStart="@dimen/image_left_margin"
         android:layout_marginTop="@dimen/body_top_margin"
         android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/beatles_anthology_box"/>
+        app:srcCompat="@drawable/beatles_anthology_box"
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/title"
@@ -53,12 +53,10 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginRight="@dimen/standard_margin"
         android:layout_marginEnd="@dimen/standard_margin"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="@dimen/standard_margin"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        android:layout_marginLeft="0dp"
         android:layout_marginStart="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/title"
         app:layout_constraintBottom_toBottomOf="parent"
